smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/invalid-object-text-block-key.smithy
// Parse error at line 3, column 5 near `"\n`: Expected: ':', but found '"'
metadata foo = {
  """
  Key""": "hello"
}
